force-app/main/default/objects/Hotel_Group__c/Hotel_Group__c.object-meta.xml
<CustomObject>
    <description>Hotel Group, Hotel Brand, Chain Scale, and Scale ID information related to a hotel group.</description>
    <label>Hotel Group</label>
    <nameField>
        <label>Hotel Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>