force-app/main/default/objects/Hotel_Group__c/fields/Chain_Scale__c.field-meta.xml
<CustomField>
    <fullName>Chain_Scale__c</fullName>
    <label>Chain Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy Chains</fullName>
            </value>
            <value>
                <fullName>Luxury Chains</fullName>
            </value>
            <value>
                <fullName>Midscale Chains</fullName>
            </value>
            <value>
                <fullName>Upper Midscale Chains</fullName>
            </value>
            <value>
                <fullName>Upper Upscale Chains</fullName>
            </value>
            <value>
                <fullName>Upscale Chains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>