force-app/main/default/objects/Hotel_Group__c/fields/Hotel_Brand__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Brand__c</fullName>
    <description>Brand of the Hotel Chain.</description>
    <label>Hotel Brand</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>