force-app/main/default/objects/Hotel_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Brand__c</columns>
    <columns>Chain_Scale__c</columns>
    <columns>Scale_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>